# baton

./: README.md  baton.example.toml  pyproject.toml
.github/workflows/: test.yml
baton/: __init__.py  cli.py  config.py  server.py  stats.py
baton/plugins/: __init__.py  auth.py  cli_auth.py  fanout.py  guardrails.py  judge.py  keepalive.py  logger.py  model_checker.py  model_monitor.py  playwright_auth.py  rate_limits.py  repo_updater.py  router.py  skills_cache.py  skillsmp_cache.py  ssm.py  standards_monitor.py  twilio.py  version_checker.py  zones.py
hooks/: 40-bw-unlock.sh  50-baton.sh  pre-shutdown.sh
systemd/: baton.service
tests/: __init__.py  conftest.py  test_cli_auth.py  test_keepalive.py  test_model_checker.py  test_model_monitor.py  test_playwright_auth.py  test_rate_limits.py  test_repo_updater.py  test_skills_cache.py  test_skillsmp_cache.py  test_ssm.py  test_standards_monitor.py  test_version_checker.py
