[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton"
version = "0.1.0"
description = "AI proxy gateway with multi-model fan-out, Bitwarden auth, and zone-aware routing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "sethdf" }
]
keywords = ["ai", "llm", "proxy", "litellm", "bitwarden"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]
all = [
    "baton[playwright,dev]",
]

[project.scripts]
baton = "baton.cli:main"
baton-stats = "baton.stats:main"

[tool.hatch.build.targets.wheel]
packages = ["baton"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
